[package]
name = "miniscript-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.84", features = [ "derive" ] }
serde_json = "1.0.34"
hex = "0.3.2"
bitcoin = "0.31.0"
elements-miniscript="0.3.0"